Updated button with neon glow

--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
   <footer>
     <p>Contact: abc@gmail.com</p>
   </footer>
+
+  <button id="greetBtn">Click me</button>
+  <p id="message"></p>
+  <script src="script.js"></script>
+
 </body>
 </html>
